[gd_scene load_steps=4 format=2]

[ext_resource path="res://tools/image_tester/image_tester.gd" type="Script" id=1]

[sub_resource type="VisualShader" id=3]
code = "shader_type spatial;
render_mode specular_schlick_ggx;




void vertex() {
// Output:0

}

void fragment() {
// Output:0

}

void light() {
// Output:0

}
"
graph_offset = Vector2( -393, 5 )

[sub_resource type="ShaderMaterial" id=2]
shader = SubResource( 3 )

[node name="image_tester" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="background_color" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelContainer" type="PanelContainer" parent="."]
anchor_bottom = 1.0
margin_left = 40.0
margin_top = 40.0
margin_right = 26.0
margin_bottom = -40.0
rect_min_size = Vector2( 200, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 193.0
margin_bottom = 713.0

[node name="game_type_list" type="OptionButton" parent="PanelContainer/VBoxContainer"]
margin_right = 186.0
margin_bottom = 20.0

[node name="image_list" type="ItemList" parent="PanelContainer/VBoxContainer"]
margin_top = 24.0
margin_right = 186.0
margin_bottom = 33.0
size_flags_vertical = 2
auto_height = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="image_index" type="Label" parent="PanelContainer/VBoxContainer"]
margin_top = 668.0
margin_right = 186.0
margin_bottom = 682.0
text = "INDEX:"

[node name="Button" type="Button" parent="PanelContainer/VBoxContainer"]
margin_top = 686.0
margin_right = 186.0
margin_bottom = 706.0

[node name="image_texture" type="TextureRect" parent="."]
material = SubResource( 2 )
margin_left = 275.0
margin_top = 49.0
margin_right = 275.0
margin_bottom = 49.0
rect_scale = Vector2( 4, 4 )
__meta__ = {
"_edit_use_anchors_": false
}
